--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<html lang="en">
+    <head>
+	    <link href="styles.css" rel="stylesheet" />
+	    
+    </head>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <div class="resume-wrapper">
 	<section class="profile section-padding">
