--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
     <head>
 	    <link href="styles.css" rel="stylesheet" />
+	    <script src="script.js"></script>
 	    
     </head>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
